# os-slides

./: .gitignore  README.md  preamble.tex  pyproject.toml
01-why-operating-systems/: 01-why-operating-systems.tex  count.c  gitlab.eps  latexmkrc  memory-layout-first.eps  memory-layout-second.eps  meson.build  operating-system-overview.eps  process-basic.eps  process-virtual-memory.eps  read-four-bytes.c
02-kernels/: 02-kernels.tex  cpu-modes.eps  hello-world-elf.eps  hello-world-linux-aarch64  hello-world-linux-x86-64  latexmkrc  meson.build
03-libraries/: 03-libraries.tex  alloc-example.c  alloc-wrapper.c  atexit-example.c  latexmkrc  meson.build  point-api.eps  point-example.c  point-libraries.eps  point-representation.eps
03-libraries/v1/: meson.build  point.c  point.h
03-libraries/v2/: meson.build  point.h
04-process-creation/: 04-process-creation.tex  execve-example.c  fork-example.c  latexmkrc  meson.build  multiple-fork-example.c  process.eps
05-process-management/: 05-process-management.tex  latexmkrc  meson.build  orphan-example.c  wait-example.c  zombie-example.c
06-basic-ipc/: 06-basic-ipc.tex  latexmkrc  meson.build  open-example.c  read-write-example.c  signal-close-example.c  signal-example-2.c  signal-example.c  wait-interrupt-example.c  wait-poll-example.c
07-process-practice/: 07-process-practice.tex  latexmkrc  meson.build  pipes.c  question-1.c  question-2.c
08-subprocess/: 08-subprocess.tex  latexmkrc  meson.build  subprocess.c
09-basic-scheduling/: 09-basic-scheduling.tex  latexmkrc
10-advanced-scheduling/: 10-advanced-scheduling.tex  latexmkrc  linux-priority.eps
11-virtual-memory/: 11-virtual-memory.tex  latexmkrc  pte.eps  single-level-page-table.eps  virt-to-phy-block.eps
12-page-tables/: 12-page-tables.tex  latexmkrc  meson.build  mmusim.c  multi-level-page-table.eps
13-page-table-implementation/: 13-page-table-implementation.tex  address-space.eps  latexmkrc  tlb.eps
14-priority-scheduling-and-memory-mapping/: 14-priority-scheduling-and-memory-mapping.tex  latexmkrc  meson.build  mmap.c
15-virtual-memory-lab-primer/: 15-virtual-memory-lab-primer.tex  latexmkrc
16-threads/: 16-threads.tex  create-fork.c  create-pthread.c  detached-error.c  detached-fixed.c  latexmkrc  meson.build  multiple-thread-example.c  pthread-example.c  stack-size.c
17-threads-implementation/: 17-threads-implementation.tex  latexmkrc  meson.build  pthread-datarace.c
18-midterm-review/: 18-midterm-review.tex  latexmkrc
19-sockets/: 19-sockets.tex  client.c  latexmkrc  meson.build  server.c
20-locks/: 20-locks.tex  latexmkrc  meson.build  pthread-datarace-fixed.c
21-user-threads-lab-primer/: 21-user-threads-lab-primer.tex  4-thread-process.eps  latexmkrc  meson.build  tailq-example.c  ucontext-example.c  ucontext-question.eps
22-locks-implementation/: 22-locks-implementation.tex  latexmkrc
23-semaphores/: 23-semaphores.tex  latexmkrc  meson.build  ordered-print-fixed.c  ordered-print-join.c  ordered-print-mutex.c  ordered-print.c  producer-consumer-fixed.c  producer-consumer.c  safe-print-fixed.c  safe-print.c
24-locking/: 24-locking.tex  latexmkrc
25-parallelization-example/: 25-parallelization-example.tex  banksim.c  latexmkrc  meson.build
26-disks/: 26-disks.tex  latexmkrc
27-filesystems/: 27-filesystems.tex  example.c  latexmkrc  meson.build
28-inodes/: 28-inodes.tex  latexmkrc
29-page-replacement/: 29-page-replacement.tex  latexmkrc
30-clock-page-replacement/: 30-clock-page-replacement.tex  latexmkrc
31-memory-allocation/: 31-memory-allocation.tex  latexmkrc  meson.build
32-buddy-and-slab-allocators/: latexmkrc  (+1 more)
(+97 files in other folders)
