project(
  '04-process-creaetion',
  'c',
  default_options : ['c_std=c17', 'warning_level=3', 'c_args=-D_DEFAULT_SOURCE']
)

executable('execve-example',
           'execve-example.c')

executable('fork-example',
           'fork-example.c')

executable('multiple-fork-example',
           'multiple-fork-example.c')
