project(
  '05-process-management',
  'c',
  default_options : ['c_std=c17', 'warning_level=3', 'c_args=-D_DEFAULT_SOURCE']
)

executable('orphan-example',
           'orphan-example.c')

executable('wait-example',
           'wait-example.c')

executable('zombie-example',
           'zombie-example.c')
