project(
  '06-basic-ipc',
  'c',
  default_options : ['c_std=c17', 'warning_level=3', 'c_args=-D_DEFAULT_SOURCE']
)

executable('open-example',
           'open-example.c')

executable('read-write-example',
           'read-write-example.c')

executable('signal-close-example',
           'signal-close-example.c')

executable('signal-example',
           'signal-example.c')

executable('signal-example-2',
           'signal-example-2.c')

executable('wait-interrupt-example',
           'wait-interrupt-example.c')

executable('wait-poll-example',
           'wait-poll-example.c')
