project('16-threads', 'c',
  version : '0.1.0',
  default_options : ['c_std=c17', 'warning_level=3', 'c_args=-D_DEFAULT_SOURCE']
)

executable('create-fork',
           'create-fork.c')

executable('create-pthread',
           'create-pthread.c')

executable('detached-error',
           'detached-error.c')

executable('detached-fixed',
           'detached-fixed.c')

executable('multiple-thread-example',
           'multiple-thread-example.c')

executable('pthread-example',
           'pthread-example.c')

executable('stack-size',
           'stack-size.c')
