project('21-semaphores', 'c',
  version : '0.1.0',
  default_options : ['c_std=c17', 'warning_level=3', 'c_args=-D_DEFAULT_SOURCE']
)

executable('ordered-print',
           'ordered-print.c')

executable('ordered-print-fixed',
           'ordered-print-fixed.c')

executable('ordered-print-join',
           'ordered-print-join.c')

executable('ordered-print-mutex',
           'ordered-print-mutex.c')

executable('producer-consumer',
           'producer-consumer.c')

executable('producer-consumer-fixed',
           'producer-consumer-fixed.c')

executable('safe-print',
           'safe-print.c')

executable('safe-print-fixed',
           'safe-print-fixed.c')
